<resources>
    <string name="app_name">SeaStarVideo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="chinese_app_name">海星音视频</string>

    <string name="hello_SeaStarVideo">Hello!\n欢迎使用海星音视频</string>
    <string name="login_with_pwd">密码登录</string>
    <string name="login_with_code">验证码登录</string>
    <string name="input_phone_number">请输入您的手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code">发送验证码</string>
    <string name="count_down_tip">%ss后重发</string>
    <string name="confirm_clause">我已认真阅读并同意《用户协议》和《隐私政策》</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="login">登录</string>
    <string name="newcomer_register">新用户注册</string>
    <string name="version">TUIKit  V1.0</string>

    <string name="register">注册</string>
    <string name="input_phone_code">请输入手机验证码</string>
    <string name="confirm_password">请确认密码</string>
    <string name="input_base_info">请设置您的基本信息</string>
    <string name="select_avatar">请选择头像</string>
    <string name="input_nickname">请输入您的昵称</string>
    <string name="sure">确定</string>

    <string name="enterprise_service">企业服务</string>
    <string name="room_title_meeting">多人音视频房间</string>
    <string name="room_des_meeting">适用于视频会议</string>
    <string name="mine">我的</string>
    <string name="id_format">ID:%s</string>
    <string name="privacy">隐私</string>
    <string name="disclaimer">免责声明</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>

    <string name="def_nickname">默认用户</string>
    <string name="def_room_id">000 000 000</string>
    <string name="create_meeting_room">创建房间</string>
    <string name="join_meeting_room">加入房间</string>
    <string name="room_id">房间ID</string>
    <string name="input_room_id">请输入房间ID</string>
    <string name="user_nickname">用户昵称</string>
    <string name="switch_mic">开启麦克风</string>
    <string name="switch_camera">开启摄像头</string>

    <string name="personal_information_collection_list">个人信息收集清单</string>
    <string name="third_party_information_sharing_list">第三方信息共享清单</string>
    <string name="user_agreement_1">用户协议</string>
    <string name="privacy_policy_1">隐私协议</string>

    <string name="sdk_version">SDK版本</string>
    <string name="app_version">应用版本</string>

    <string name="leave_room">离开房间</string>
    <string name="close_audio">静音</string>
    <string name="close_video">关闭视频</string>
    <string name="share_screen">共享屏幕</string>
    <string name="member_list">参会成员</string>
    <string name="chat">聊天</string>
    <string name="unable_use_mic">无法使用麦克风</string>
    <string name="method_grant_mic_permissions">请在设备的“设置-隐私-麦克风”中允许 STM Link 访问您的麦克风</string>
    <string name="unable_use_camera">无法使用摄像头</string>
    <string name="method_grant_camera_permissions">请在设备的“设置-隐私-摄像头”中允许 STM Link 访问您的摄像头</string>
    <string name="shared_whiteboard">共享白板</string>
    <string name="sure_leave_room">您确定离开房间吗？</string>
    <string name="all_member_close_mic">所有以及新加入的成员将被静音</string>
    <string name="enable_self_open_mic">允许成员自我解除静音</string>
    <string name="all_member_open_mic">您确定解除全体静音吗</string>
    <string name="all_member_close_camera">所有以及新加入的成员将被禁画</string>
    <string name="enable_self_open_camera">允许成员自我开启视频</string>
    <string name="all_member_open_camera">您确定解除全体禁画吗</string>
    <string name="cancel">取消</string>
    <string name="go_to_setting">前往设置</string>
    <string name="keep_close_mic">保持静音</string>
    <string name="open_mic">解除静音</string>
    <string name="keep_close_camera">保持关闭</string>
    <string name="open_camera">开启视频</string>
    <string name="think_again">再想想</string>
    <string name="all_member_close_mic_1">全体静音</string>
    <string name="all_member_open_mic_1">解除全体静音</string>
    <string name="all_member_close_camera_1">全体禁画</string>
    <string name="all_member_open_camera_1">解除全体禁画</string>
    <string name="me_parenthesis">（我）</string>
    <string name="compere_parenthesis">（主持人）</string>
    <string name="creator_parenthesis">（创建者）</string>
    <string name="remove_someone_member">您确定要移出%s吗</string>
    <string name="report">举报</string>
    <string name="report_content_title">举报描述（选填）</string>
    <string name="report_content_hint">请您描述举报内容，便于平台判断违规情况</string>
    <string name="report_lack_tag">至少选择一个举报标签</string>

    <string name="say_something">聊点什么&#8230;</string>
    <string name="send">发送</string>
</resources>