<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-2023 Hangzhou Freewind Technology Co., Ltd.
  ~ All rights reserved.
  ~ http://www.seastart.cn
  ~
  ~ This product is protected by copyright and distributed under
  ~ licenses restricting copying, distribution and decompilation.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f7f8fa"
    tools:context=".meeting.member.MemberListFragment">

    <com.freewind.seastarvideo.ui.CustomTopBar
        android:id="@+id/topBarCtb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        app:isShowExitArrow="true"
        app:isShowTitle="true"
        app:titleContent="@string/member_list"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/membersRv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarCtb"
        app:layout_constraintBottom_toTopOf="@id/allOptCl"
        android:layout_marginTop="@dimen/dp_10"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/allOptCl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:paddingTop="@dimen/dp_7"
        android:paddingBottom="@dimen/dp_7">
        
        <com.freewind.seastarvideo.ui.SelectTextView
            android:id="@+id/optAllMicStv"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:selectedContent="@string/all_member_open_mic_1"
            app:unselectedContent="@string/all_member_close_mic_1"
            android:textSize="@dimen/sp_15"
            android:textColor="@drawable/selector_text_color_gray_999999_red_ff4b51"
            android:background="@drawable/selector_text_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/optAllCameraStv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/dp_5" />

        <com.freewind.seastarvideo.ui.SelectTextView
            android:id="@+id/optAllCameraStv"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:selectedContent="@string/all_member_open_camera_1"
            app:unselectedContent="@string/all_member_close_camera_1"
            android:textSize="@dimen/sp_15"
            android:textColor="@drawable/selector_text_color_gray_999999_red_ff4b51"
            android:background="@drawable/selector_text_bg"
            app:layout_constraintStart_toEndOf="@id/optAllMicStv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/dp_5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>