<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authorize.register.RegisterNicknameFragment">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_base_info"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/textColor_333333"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_20"/>

    <com.freewind.seastarvideo.ui.CustomAvatar
        android:id="@+id/avatarManIv"
        android:layout_width="@dimen/dp_82"
        android:layout_height="@dimen/dp_82"
        app:avatarIcon="@mipmap/avatar_man"
        app:selectedIcon="@mipmap/icon_selected"
        app:selectedIconSize="@dimen/dp_16"
        app:isSelected="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/avatarWomanIv"
        app:layout_constraintTop_toBottomOf="@id/titleTv"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_15"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <com.freewind.seastarvideo.ui.CustomAvatar
        android:id="@+id/avatarWomanIv"
        android:layout_width="@dimen/dp_82"
        android:layout_height="@dimen/dp_82"
        app:avatarIcon="@mipmap/avatar_woman"
        app:selectedIcon="@mipmap/icon_selected"
        app:selectedIconSize="@dimen/dp_16"
        app:isSelected="false"
        app:layout_constraintStart_toEndOf="@id/avatarManIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTv"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_15"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/avatarTipTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarManIv"
        android:layout_marginTop="@dimen/dp_10"/>

    <com.freewind.seastarvideo.ui.ClearEditText
        android:id="@+id/nickNameCet"
        style="@style/edit"
        android:hint="@string/input_nickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarTipTv"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:drawableEnd="@mipmap/icon_clean"/>

    <com.freewind.seastarvideo.ui.StateTextView
        android:id="@+id/registerSureStv"
        style="@style/bigBtn"
        android:text="@string/sure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_5"/>

</androidx.constraintlayout.widget.ConstraintLayout>