<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-2023 Hangzhou Freewind Technology Co., Ltd.
  ~ All rights reserved.
  ~ http://www.seastart.cn
  ~
  ~ This product is protected by copyright and distributed under
  ~ licenses restricting copying, distribution and decompilation.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".privacy.PrivacyListFragment">

    <FrameLayout
        android:id="@+id/topBarFl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.freewind.seastarvideo.ui.CustomTopBar
            android:id="@+id/topBarCtb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            app:titleContent="@string/privacy"
            app:isShowTitle="true"
            app:isShowExitArrow="true" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:background="@color/gray_f7f8fa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarFl"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dp_10">

            <com.freewind.seastarvideo.ui.CustomEnterItem
                android:id="@+id/piclCei"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                app:itemDes="@string/personal_information_collection_list"
                app:itemEnterIcon="@mipmap/arrow_enter"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/black_1A000000"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"/>

            <com.freewind.seastarvideo.ui.CustomEnterItem
                android:id="@+id/tpislCei"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                app:itemDes="@string/third_party_information_sharing_list"
                app:itemEnterIcon="@mipmap/arrow_enter"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/black_1A000000"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"/>

            <com.freewind.seastarvideo.ui.CustomEnterItem
                android:id="@+id/uaCei"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                app:itemDes="@string/user_agreement_1"
                app:itemEnterIcon="@mipmap/arrow_enter"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/black_1A000000"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"/>

            <com.freewind.seastarvideo.ui.CustomEnterItem
                android:id="@+id/ppCei"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                app:itemDes="@string/privacy_policy_1"
                app:itemEnterIcon="@mipmap/arrow_enter"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/black_1A000000"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>